--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -240,3 +240,13 @@
         }
     }
 }
+
+ul.year-nav {
+    list-style-type: none;
+    margin-left: 0px;
+
+    li {
+        display: inline;
+        margin-right: 20px;
+    }
+}
