--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,38 +1,27 @@
 <footer class="site-footer">
 
-  <div class="wrapper">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-8 col-md-offset-2">
 
-    <h2 class="footer-heading">{{ site.title }}</h2>
+        <h2>{{ site.title }}</h2>
 
-    <div class="footer-col-wrapper">
-      <div class="footer-col footer-col-1">
-        <ul class="contact-list">
-          <li>{{ site.title }}</li>
-          <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
-        </ul>
-      </div>
+        <div class="row">
+          <div class="col-sm-6">
 
-      <div class="footer-col footer-col-2">
-        <ul class="social-media-list">
-          {% if site.github_username %}
-          <li>
-            {% include icon-github.html username=site.github_username %}
-          </li>
-          {% endif %}
+            <ul class="list-unstyled">
+              <li>{{ site.title }}</li>
+              <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
+            </ul>
 
-          {% if site.twitter_username %}
-          <li>
-            {% include icon-twitter.html username=site.twitter_username %}
-          </li>
-          {% endif %}
-        </ul>
-      </div>
+          </div>
+          <div class="col-sm-6">
+            <p>{{ site.description }}</p>
+          </div>
 
-      <div class="footer-col footer-col-3">
-        <p>{{ site.description }}</p>
+        </div>
       </div>
     </div>
-
   </div>
 
 </footer>
