--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,15 @@
 <header class="site-header">
+  <nav class="navbar">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-8 col-md-offset-2">
 
-  <div class="wrapper">
-    <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
-  </div>
+          <div class="navbar-header">
+            <a class="navbar-brand" href="{{ site.baseurl }}/">{{ site.title }}</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </nav>
 
 </header>
