--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,8 +8,12 @@
     {% include header.html %}
 
     <div class="page-content">
-      <div class="wrapper">
-        {{ content }}
+      <div class="container">
+        <div class="row">
+          <div class="col-md-8 col-md-offset-2">
+            {{ content }}
+          </div>
+        </div>
       </div>
     </div>
 
