--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,19 +4,24 @@
     <div class="row">
       <div class="col-md-8 col-md-offset-2">
 
-        <h2>{{ site.title }}</h2>
-
         <div class="row">
-          <div class="col-sm-6">
+          <div class="col-sm-7">
+            <h2>{{ site.title }}</h2>
 
             <ul class="list-unstyled">
-              <li>{{ site.title }}</li>
               <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
+              <li><a href="https://github.com/Code4SA/opengazettes">Contribute on GitHub</a></li>
             </ul>
 
-          </div>
-          <div class="col-sm-6">
             <p>{{ site.description }}</p>
+          </div>
+
+          <div class="col-sm-5 text-right">
+            <div class="pull-right">
+              <a href="http://code4sa.org"><img src="{{ "/img/logo.png" | prepend: site.baseurl }}" class="c4sa-logo img-responsive" alt="Code for SA"></a>
+              <br>
+              <a href="https://indigotrust.org.uk/"><img src="{{ "/img/indigo_trust.png" | prepend: site.baseurl }}" class="indigo-strust img-responsive" alt="Indigo Trust"></a>
+            </div>
           </div>
 
         </div>
