--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,6 +7,10 @@
           <div class="navbar-header">
             <a class="navbar-brand" href="{{ site.baseurl }}/">{{ site.title }}</a>
           </div>
+
+          <div class="pull-right hidden-xs">
+            <a href="http://code4sa.org"><img src="{{ "/img/header_logo.png" | prepend: site.baseurl }}" class="c4sa-logo" alt="Code for SA"></a>
+          </div>
         </div>
       </div>
     </div>
