Track outbound links
jQuery

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,6 +29,9 @@
       ga('send', 'pageview');
     </script>
 
+    <script src="/js/jquery-1.11.3.min.js"></script>
+    <script src="/js/main.js"></script>
+
   </body>
 
 </html>
