--- a/_sass/site.scss
+++ b/_sass/site.scss
@@ -4,11 +4,6 @@
         border-bottom: 1px solid $grey-color-light;
     }
 
-    .c4sa-logo {
-        height: 40px;
-        margin-top: 5px;
-    }
-
     .navbar-brand {
         font-size: 26px;
         font-weight: 300;
@@ -33,9 +28,14 @@
         margin-top: 0px;
     }
 
-    .c4sa-logo {
+    .logos {
+        margin-top: 30px;
+    }
+
+    .logo {
+        width: auto;
         height: 75px;
-        float: right;
+        margin-bottom: 20px;
     }
 }
 
