Add code for africa logo

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -23,14 +23,17 @@
         </div>
 
         <div class="row logos">
-          <div class="col-sm-4 text-center">
+          <div class="col-sm-3 text-center">
             <a href="http://code4sa.org"><img src="{{ "/img/logo.png" | prepend: site.baseurl }}" class="c4sa logo img-responsive" alt="Code for SA"></a>
           </div>
-          <div class="col-sm-4 text-center">
+          <div class="col-sm-3 text-center">
             <a href="http://www.saflii.org/"><img src="{{ "/img/saflii_logo.png" | prepend: site.baseurl }}" class="saflii logo img-responsive" alt="SAFLII"></a>
           </div>
-          <div class="col-sm-4 text-center">
+          <div class="col-sm-3 text-center">
             <a href="https://indigotrust.org.uk/"><img src="{{ "/img/indigo_trust.png" | prepend: site.baseurl }}" class="indigo-trust logo img-responsive" alt="Indigo Trust"></a>
+          </div>
+          <div class="col-sm-3 text-center">
+            <a href="https://codeforafrica.org/"><img src="{{ "/img/codeforafrica_logo.png" | prepend: site.baseurl }}" class="code4africa logo img-responsive" alt="Code for Africa"></a>
           </div>
 
         </div>
