--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -37,6 +37,10 @@
           </div>
 
         </div>
+
+        <p>
+        Gazettes from the <a href="http://www.gpwonline.co.za/">Government Printing Works</a> are re-shared under <a href="/img/gpw-authorization.pdf">Government Printers Authorization No. 11733 dated 23 March 2016</a>.
+        </p>
       </div>
     </div>
   </div>
