--- a/_layouts/year.html
+++ b/_layouts/year.html
@@ -21,15 +21,7 @@ layout: default
       {% endif %}
 
       <li>
-        <a href="{{ gazette.archive_url }}">
-          {% if page.provincial %}{{ page.jurisdiction_name }}{% endif %}
-          {{ gazette.publication_title }}
-          {% if gazette.publication_subtitle %}({{ gazette.publication_subtitle }}){% endif %}
-          {% if gazette.special_issue %}{{ gazette.special_issue }}{% endif %}
-          {% if gazette.volume_number %} vol {{ gazette.volume_number }}{% endif %}
-          no {{ gazette.issue_number }}
-          dated {{ gazette.publication_date | date: "%d %B %Y" }}
-        </a>
+        <a href="{{ gazette.archive_url }}">{{ gazette.issue_title }}</a>
       </li>
       {% if forloop.last %}</ul>{% endif %}
     {% endfor %}
