About page with technical details

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,6 +10,7 @@
           <div class="col-sm-6">
             <ul class="list-unstyled">
               <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
+              <li><a href="/about.html">About Open Gazettes</a></li>
               <li><a href="http://code4sa-gazettes.s3.amazonaws.com/archive/recently-added.atom" type="application/rss+xml" rel="alternate">Atom Feed</a></li>
             </ul>
           </div>
