add homepage content, create join page and add content

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,7 +21,9 @@
             </ul>
           </div>
         </div>
-
+        <div class="footer_campaign">
+          <p>Who is a part of the <a href="#">#GazetteLiberation</a> campaign?</p>
+        </div>
         <div class="row logos">
           <div class="col-sm-3 text-center">
             <a href="http://code4sa.org"><img src="{{ "/img/logo.png" | prepend: site.baseurl }}" class="c4sa logo img-responsive" alt="Code for SA"></a>
