--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,6 +6,13 @@
 
           <div class="navbar-header">
             <a class="navbar-brand" href="{{ site.baseurl }}/">{{ site.title }}</a>
+            <ul style="display: inline">
+              <a href="#"><li style="list-style-type:none">Join</li></a>
+              <a href="#"><li style="list-style-type:none">Contact</li></a>
+            </ul>
+            <p style="clear:both">The biggest freely available collection of gazettes in South Africa</p>
+            <p>Our collection so far: <strong>XX</strong> gazettes covering <strong>YYYY</strong> to <strong>2016</strong></p>
+            <button name="button">Liberate your gazettes</button>
           </div>
         </div>
       </div>
