add css styling to homepage

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -43,6 +43,9 @@
         <p>
         Gazettes from the <a href="http://www.gpwonline.co.za/">Government Printing Works</a> are re-shared under <a href="/img/gpw-authorization.pdf">Government Printers Authorization No. 11733 dated 23 March 2016</a>.
         </p>
+
+        <!--<div class="twitter-feed"><a class="twitter-timeline"  href="https://twitter.com/hashtag/GazetteLiberation" data-widget-id="771327133071310848">#GazetteLiberation Tweets</a><script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script></div>-->
+
       </div>
     </div>
   </div>
