--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,22 +1,27 @@
 <header class="site-header">
   <nav class="navbar">
     <div class="container">
-      <div class="row">
-        <div class="col-md-8 col-md-offset-2">
 
-          <div class="navbar-header">
-            <a class="navbar-brand" href="{{ site.baseurl }}/">{{ site.title }}</a>
-            <ul style="display: inline">
-              <a href="#"><li style="list-style-type:none">Join</li></a>
-              <a href="#"><li style="list-style-type:none">Contact</li></a>
-            </ul>
-            <p style="clear:both">The biggest freely available collection of gazettes in South Africa</p>
-            <p>Our collection so far: <strong>XX</strong> gazettes covering <strong>YYYY</strong> to <strong>2016</strong></p>
-            <button name="button">Liberate your gazettes</button>
-          </div>
-        </div>
+      <div class="navbar-header">
+          <a class="navbar-brand" href="{{ site.baseurl }}/">{{ site.title }}</a>
+          <p class="navitems">Join</p><p class="navitems">About</p>
       </div>
+
     </div>
   </nav>
+
+    <div class="header-cta">
+        <p class="cta-tagline">The biggest freely available collection of gazettes in South Africa</p>
+        <div class="row">
+        <div class="col-md-8 col-md-offset-2">
+            <div class="col-md-8">
+                <p>Our collection so far: <strong>XX</strong> gazettes covering <strong>YYYY</strong> to <strong>2016</strong></p>
+            </div>
+            <div class="col-md-4">
+                <button name="button">Liberate your gazettes</button>
+            </div>
+        </div>
+        </div>
+    </div>
 
 </header>
