--- a/_includes/introduction.html
+++ b/_includes/introduction.html
@@ -1,8 +1,11 @@
 <div class="introduction">
+
 	<div class="banner">
-	  <p>banner will appear here</p>
+		<img src="img/banner-1024.jpg" alt="banner" title="banner" />
 	</div>
+
 	<div class="cta">
 		<p>Help us build the biggest collection of freely available Gazettes in South Africa. <a href="#">Share your Gazettes</a> (print or digital) and join the <a href="#">#GazetteLiberation</a> campaign.</p>
 	</div>
+	
 </div>
