--- a/_sass/site.scss
+++ b/_sass/site.scss
@@ -1,10 +1,20 @@
 .site-header {
-    font-family: 'Open Sans', sans-serif;
-    font-weight: 100;
+
     .navbar {
+        background-color: #000000;
         border-top: 5px solid $grey-color-dark;
         border-bottom: 1px solid $grey-color-light;
     }
+
+    .navitems {
+        float:left;
+        color: #fff;
+        font-weight: 600;
+        padding-top: 16px;
+        padding-left: 25px;
+        text-transform: uppercase;
+    }
+
     .navbar-brand {
         font-size: 26px;
         font-weight: 300;
@@ -18,14 +28,21 @@
             color: $grey-color-dark;
         }
     }
+    .header-cta {
+        p.cta-tagline {
+            clear:both;
+            text-align: center;
+            font-size: 24px;
+            font-weight: 600;
+            margin-bottom: 30px;
+        }
+    }
 }
 
 .site-footer {
-    border-top: 1px solid $grey-color-light;
+    background-color: #f7f7f7;
     margin-top: 30px;
     padding: 30px;
-    font-family: 'Open Sans', sans-serif;
-    font-weight: 100;
 
     h2 {
         margin-top: 0px;
@@ -64,12 +81,19 @@
 }
 
 .introduction {
-    font-family: 'Open Sans', sans-serif;
-    font-weight: 100;
-    background-color:#efefef;
+    
+    .banner img {
+        width:100%;
+    }
+
+    margin-top: 30px;
+
+    .cta a {
+        font-weight: 600;
+        color: #0067c5;
+    }
 }
 
 .join_intro {
-    font-family: 'Open Sans', sans-serif;
-    font-weight: 100;
+
 }
