add container to header, add icon and update css

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,18 +10,22 @@
     </div>
   </nav>
 
-    <div class="header-cta">
-        <p class="cta-tagline">The biggest freely available collection of gazettes in South Africa</p>
-        <div class="row">
-        <div class="col-md-8 col-md-offset-2">
-            <div class="col-md-8">
-                <p>Our collection so far: <strong>XX</strong> gazettes covering <strong>YYYY</strong> to <strong>2016</strong></p>
-            </div>
-            <div class="col-md-4">
-                <button name="button">Liberate your gazettes</button>
+    <div class="container">
+    <div class="row"><div class="col-md-8 col-md-offset-2">
+
+        <div class="header-cta">
+            <p class="cta-tagline">The biggest freely available collection of gazettes in South Africa</p>
+            <div class="row">
+                <div class="col-md-8">
+                    <p>Our collection so far:<span class="text-standout">XX</span> gazettes covering <span class="text-standout">YYYY</span> to <span class="text-standout">2016</span></p>
+                </div>
+                <div class="col-md-4">
+                    <button name="button">Liberate your gazettes</button>
+                </div>
             </div>
         </div>
-        </div>
+
+    </div></div>
     </div>
 
 </header>
