--- a/_sass/site.scss
+++ b/_sass/site.scss
@@ -1,23 +1,52 @@
+body {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 16px;
+    font-weight: 300;
+}
+
+button {
+    background-color: #0067c5;
+    border: none;
+    color: #ffffff;
+    padding: 10px;
+    font-weight:600;
+}
+
+button:hover {
+    background-color: $grey-color-light;
+    color: #0067c5;
+}
+
+.text-standout {
+    color: #0067c5;
+    font-weight:600;
+}
+
 .site-header {
 
     .navbar {
         background-color: #000000;
         border-top: 5px solid $grey-color-dark;
         border-bottom: 1px solid $grey-color-light;
+        background-image: url(/img/icon-openbook.png);
+        background-repeat: no-repeat;
+        background-position: 22px 8px;
+        background-size: 35px;
     }
 
     .navitems {
         float:left;
         color: #fff;
-        font-weight: 600;
+        font-weight: 400;
         padding-top: 16px;
         padding-left: 25px;
         text-transform: uppercase;
     }
 
     .navbar-brand {
-        font-size: 26px;
-        font-weight: 300;
+        color: #ffffff!important;
+        font-size: 22px;
+        font-weight: 400;
 
         @media (max-width: $screen-xs-max) {
             font-size: 20px;
@@ -34,7 +63,10 @@
             text-align: center;
             font-size: 24px;
             font-weight: 600;
-            margin-bottom: 30px;
+            margin-bottom: 15px;
+        }
+        p.cta-tagline row col-md-8 p {
+            margin-top: 12px;
         }
     }
 }
