add province buttons, update css, correct intro spacing

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,7 +20,7 @@
                     <p>Our collection so far:<span class="text-standout">XX</span> gazettes covering <span class="text-standout">YYYY</span> to <span class="text-standout">2016</span></p>
                 </div>
                 <div class="col-md-4">
-                    <button name="button">Liberate your gazettes</button>
+                    <a href="#"><button name="button">Liberate your gazettes</button></a>
                 </div>
             </div>
         </div>
