--- a/_includes/introduction.html
+++ b/_includes/introduction.html
@@ -9,3 +9,25 @@
 	</div>
 	
 </div>
+
+<div class="gazettes_nav">
+	<div class="container">
+			<div class="row">
+				<div class="col-md-4"><button class="gazettes_nav_btn btn_wc" name="button">Western Cape</button></div>
+				<div class="col-md-4"><button class="gazettes_nav_btn btn_gt" name="button">Gauteng</button></div>
+				<div class="col-md-4"><button class="gazettes_nav_btn btn_kzn" name="button">Kwa-Zulu Natal</button></div>
+			</div>
+
+			<div class="row">
+				<div class="col-md-4"><button class="gazettes_nav_btn btn_ec" name="button">Eastern Cape</button></div>
+				<div class="col-md-4"><button class="gazettes_nav_btn btn_fs" name="button">Free State</button></div>
+				<div class="col-md-4"><button class="gazettes_nav_btn btn_nw" name="button">North-West</button></div>
+			</div>
+
+			<div class="row">
+				<div class="col-md-4"><button class="gazettes_nav_btn btn_nc" name="button">Northern Cape</button></div>
+				<div class="col-md-4"><button class="gazettes_nav_btn btn_mp" name="button">Mpumalanga</button></div>
+				<div class="col-md-4"><button class="gazettes_nav_btn btn_lim" name="button">Limpopo</button></div>
+			</div>
+	</div>
+</div>
