style update, add national gazette button

--- a/_includes/introduction.html
+++ b/_includes/introduction.html
@@ -11,23 +11,34 @@
 </div>
 
 <div class="gazettes_nav">
+
+<h2>Explore the collection.</h2>
+
+	<div>
+		<p>Visit our National collection</p>
+		<button name="button">South African Government Gazettes</button>
+	</div>
+
+
+<h3 class="gazettes_h">Or browse our Provincial Gazettes</h3>
+
 	<div class="container">
 			<div class="row">
-				<div class="col-md-4"><button class="gazettes_nav_btn btn_wc" name="button">Western Cape</button></div>
-				<div class="col-md-4"><button class="gazettes_nav_btn btn_gt" name="button">Gauteng</button></div>
-				<div class="col-md-4"><button class="gazettes_nav_btn btn_kzn" name="button">Kwa-Zulu Natal</button></div>
+				<div class="col-md-4"><a class="btn_p" href="#"><button class="gazettes_nav_btn btn_wc" name="button">Western Cape</button></a></div>
+				<div class="col-md-4"><a class="btn_p" href="#"><button class="gazettes_nav_btn btn_gt" name="button">Gauteng</button></a></div>
+				<div class="col-md-4"><a class="btn_p" href="#"><button class="gazettes_nav_btn btn_kzn" name="button">Kwa-Zulu Natal</button></a></div>
 			</div>
 
 			<div class="row">
-				<div class="col-md-4"><button class="gazettes_nav_btn btn_ec" name="button">Eastern Cape</button></div>
-				<div class="col-md-4"><button class="gazettes_nav_btn btn_fs" name="button">Free State</button></div>
-				<div class="col-md-4"><button class="gazettes_nav_btn btn_nw" name="button">North-West</button></div>
+				<div class="col-md-4"><a class="btn_p" href="#"><button class="gazettes_nav_btn btn_ec" name="button">Eastern Cape</button></a></div>
+				<div class="col-md-4"><a class="btn_p" href="#"><button class="gazettes_nav_btn btn_fs" name="button">Free State</button></a></div>
+				<div class="col-md-4"><a class="btn_p" href="#"><button class="gazettes_nav_btn btn_nw" name="button">North-West</button></a></div>
 			</div>
 
 			<div class="row">
-				<div class="col-md-4"><button class="gazettes_nav_btn btn_nc" name="button">Northern Cape</button></div>
-				<div class="col-md-4"><button class="gazettes_nav_btn btn_mp" name="button">Mpumalanga</button></div>
-				<div class="col-md-4"><button class="gazettes_nav_btn btn_lim" name="button">Limpopo</button></div>
+				<div class="col-md-4"><a class="btn_p" href="#"><button class="gazettes_nav_btn btn_nc" name="button">Northern Cape</button></a></div>
+				<div class="col-md-4"><a class="btn_p" href="#"><button class="gazettes_nav_btn btn_mp" name="button">Mpumalanga</button></a></div>
+				<div class="col-md-4"><a class="btn_p" href="#"><button class="gazettes_nav_btn btn_lim" name="button">Limpopo</button></a></div>
 			</div>
 	</div>
 </div>
