--- a/_sass/site.scss
+++ b/_sass/site.scss
@@ -119,6 +119,7 @@ button:hover {
     }
 
     margin-top: 30px;
+    margin-bottom: 30px;
 
     .cta a {
         font-weight: 600;
@@ -128,6 +129,11 @@ button:hover {
 }
 
 .gazettes_nav {
+
+    .gazettes_h {
+        text-align:center;
+        font-weight: 400;
+    }
         
     .gazettes_nav_btn {
             
@@ -136,11 +142,22 @@ button:hover {
         color: #ffffff;
         padding: 10px;
         font-weight: 600;
-        margin-bottom: 10px;
+        margin-bottom: 20px;
         width: 100%;
         height: 200px;
+        border-radius: 5px;
     }
 
+    .btn_p {
+        color: #fff;
+        font-size: 20px;
+        font-family: 'Lato', sans-seif;
+    }
+
+    .btn_p:hover {
+        text-decoration: none;
+    }
+    
     .btn_wc {
         background-image: url(/img/provinces/westerncape.jpg);
     }
