update header, introduction and buttons
temporarily remove header counter and banner in introduction;
create national button, style and add functionality to buttons;

--- a/_includes/introduction.html
+++ b/_includes/introduction.html
@@ -1,44 +1,30 @@
-<div class="introduction">
-
-	<div class="banner">
-		<img src="img/banner-1024.jpg" alt="banner" title="banner" />
-	</div>
-
-	<div class="cta">
-		<p>Help us build the biggest collection of freely available Gazettes in South Africa. <a href="#">Share your Gazettes</a> (print or digital) and join the <a href="#">#GazetteLiberation</a> campaign.</p>
-	</div>
-	
-</div>
-
 <div class="gazettes_nav">
 
-<h2>Explore the collection.</h2>
-
+<div class="container">
+	<h2>National Gazettes</h2>
 	<div>
-		<p>Visit our National collection</p>
-		<button name="button">South African Government Gazettes</button>
+		<div class="row">
+			<div class="col-md-4"><a class="btn_p" href="http://opengazettes.org.za/gazettes/ZA/"><button class="gazettes_nav_btn btn_nat" name="button"><span class="btn_text">South African Government Gazettes</span></button></a></div>
+		</div>
 	</div>
+</div>
 
-
-<h3 class="gazettes_h">Or browse our Provincial Gazettes</h3>
-
-	<div class="container">
-			<div class="row">
-				<div class="col-md-4"><a class="btn_p" href="#"><button class="gazettes_nav_btn btn_wc" name="button">Western Cape</button></a></div>
-				<div class="col-md-4"><a class="btn_p" href="#"><button class="gazettes_nav_btn btn_gt" name="button">Gauteng</button></a></div>
-				<div class="col-md-4"><a class="btn_p" href="#"><button class="gazettes_nav_btn btn_kzn" name="button">Kwa-Zulu Natal</button></a></div>
-			</div>
-
-			<div class="row">
-				<div class="col-md-4"><a class="btn_p" href="#"><button class="gazettes_nav_btn btn_ec" name="button">Eastern Cape</button></a></div>
-				<div class="col-md-4"><a class="btn_p" href="#"><button class="gazettes_nav_btn btn_fs" name="button">Free State</button></a></div>
-				<div class="col-md-4"><a class="btn_p" href="#"><button class="gazettes_nav_btn btn_nw" name="button">North-West</button></a></div>
-			</div>
-
-			<div class="row">
-				<div class="col-md-4"><a class="btn_p" href="#"><button class="gazettes_nav_btn btn_nc" name="button">Northern Cape</button></a></div>
-				<div class="col-md-4"><a class="btn_p" href="#"><button class="gazettes_nav_btn btn_mp" name="button">Mpumalanga</button></a></div>
-				<div class="col-md-4"><a class="btn_p" href="#"><button class="gazettes_nav_btn btn_lim" name="button">Limpopo</button></a></div>
-			</div>
+<div class="container">
+	<h2>Provincial Gazettes</h2>
+		<div class="row">
+			<div class="col-md-4"><a class="btn_p" href="http://opengazettes.org.za/gazettes/ZA-EC/"><button class="gazettes_nav_btn btn_ec" name="button"><span class="btn_text">Eastern Cape</span></button></a></div>
+			<div class="col-md-4"><a class="btn_p" href="http://opengazettes.org.za/gazettes/ZA-FS/"><button class="gazettes_nav_btn btn_fs" name="button"><span class="btn_text">Free State</span></button></a></div>
+			<div class="col-md-4"><a class="btn_p" href="http://opengazettes.org.za/gazettes/ZA-GT/"><button class="gazettes_nav_btn btn_gt" name="button"><span class="btn_text">Gauteng</span></button></a></div>				
+		</div>
+		<div class="row">
+			<div class="col-md-4"><a class="btn_p" href="http://opengazettes.org.za/gazettes/ZA-NL/"><button class="gazettes_nav_btn btn_kzn" name="button"><span class="btn_text">Kwa-Zulu Natal</span></button></a></div>
+			<div class="col-md-4"><a class="btn_p" href="http://opengazettes.org.za/gazettes/ZA-LP/"><button class="gazettes_nav_btn btn_lim" name="button"><span class="btn_text">Limpopo</span></button></a></div>
+			<div class="col-md-4"><a class="btn_p" href="http://opengazettes.org.za/gazettes/ZA-MP/"><button class="gazettes_nav_btn btn_mp" name="button"><span class="btn_text">Mpumalanga</span></button></a></div>
+		</div>
+		<div class="row">
+			<div class="col-md-4"><a class="btn_p" href="http://opengazettes.org.za/gazettes/ZA-NC/"><button class="gazettes_nav_btn btn_nc" name="button"><span class="btn_text">Northern Cape</span></button></a></div>
+			<div class="col-md-4"><a class="btn_p" href="http://opengazettes.org.za/gazettes/ZA-NW/"><button class="gazettes_nav_btn btn_nw" name="button"><span class="btn_text">North-West</span></button></a></div>
+			<div class="col-md-4"><a class="btn_p" href="http://opengazettes.org.za/gazettes/ZA-WC/"><button class="gazettes_nav_btn btn_wc" name="button"><span class="btn_text">Western Cape</span></button></a></div>
+		</div>
 	</div>
 </div>
