update header, add banner text
add header content and navigation, as well as banner text

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,23 +6,43 @@
         <div class="col-md-6">
             <img src="/img/icon-openbook.png" width="50px" style="float:left;margin-right:5px;" />
             <a class="navbar-brand" href="{{ site.baseurl }}/">{{ site.title }}</a>
+            <div class="row byline">
+                <p>The biggest freely available collection of gazettes in South Africa</p>
+            </div>
         </div>
 
         <div class="col-md-6">
             <div class="navlist">
                 <ul>
                   <a href="#" class="col-md-2"><li>About</li></a>
-                  <a href="#" class="col-md-2"><li>Join</li></a>
+                  <a href="http://opengazettes.org.za/join" class="col-md-2"><li>Join</li></a>
                   <a href="#" class="col-md-2"><li>Contact</li></a>
                 </ul>
             </div>
         </div>
     </div>
 
-    <div class="row byline">
-        <p>The biggest freely available collection of gazettes in South Africa</p>
-    </div>
 
     </div>
   </nav>
+
+
+  <div class="container">
+      <div class="row">
+
+        <div class="col-md-4 box-byline">
+            <p>Gazettes liberated from 2000 to 2016</p>
+        </div>
+
+        <div class="col-md-4 counter">
+            <p><span class="box-num">3</span><span class="box-num">5</span><span class="box-num">0</span><span class="box-num">0</span></p>
+        </div>
+
+        <div class="col-md-4 liberate">
+            <a href="#"><button name="button">Liberate your gazettes</button></a>
+        </div>
+
+      </div>
+  </div>
+
 </header>
