--- a/_includes/introduction.html
+++ b/_includes/introduction.html
@@ -1,3 +1,13 @@
+<div class="introduction">
+		<div class="container">
+				<div class="banner">
+					<p>Join the <span class="highlight"><a href="#">#GazetteLiberation 
+					</a>Campaign</span></p>
+					<p>Help up build the biggest collection of freely available Gazettes in South Africa</p>
+				</div>
+		</div>
+</div>
+
 <div class="gazettes_nav">
 
 <div class="container">
