amend title bar and navigation, add container spacing

--- a/_includes/introduction.html
+++ b/_includes/introduction.html
@@ -1,5 +1,5 @@
 <div class="introduction">
-		<div class="container">
+		<div class="container col-md-8 col-md-offset-2">
 				<div class="banner">
 					<p>Join the <span class="highlight"><a href="#">#GazetteLiberation 
 					</a>Campaign</span></p>
@@ -10,7 +10,7 @@
 
 <div class="gazettes_nav">
 
-<div class="container">
+<div class="container col-md-8 col-md-offset-2">
 	<h2>National Gazettes</h2>
 	<div>
 		<div class="row">
@@ -19,7 +19,7 @@
 	</div>
 </div>
 
-<div class="container">
+<div class="container col-md-8 col-md-offset-2">
 	<h2>Provincial Gazettes</h2>
 		<div class="row">
 			<div class="col-md-4"><a class="btn_p" href="http://opengazettes.org.za/gazettes/ZA-EC/"><button class="gazettes_nav_btn btn_ec" name="button"><span class="btn_text">Eastern Cape</span></button></a></div>
