--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,23 +3,23 @@
     <div class="container">
 
     <div class="row">
-        <div class="col-md-6">
+        <div class="img-ico">
             <img src="/img/icon-openbook.png" width="50px" style="float:left;margin-right:5px;" />
             <a class="navbar-brand" href="{{ site.baseurl }}/">{{ site.title }}</a>
-            <div class="row byline">
-                <p>The biggest freely available collection of gazettes in South Africa</p>
-            </div>
-        </div>
-
-        <div class="col-md-6">
             <div class="navlist">
                 <ul>
-                  <a href="#" class="col-md-2"><li>About</li></a>
-                  <a href="http://opengazettes.org.za/join" class="col-md-2"><li>Join</li></a>
-                  <a href="#" class="col-md-2"><li>Contact</li></a>
+                  <a href="#"><li>About</li></a>
+                  <a href="http://opengazettes.org.za/join"><li>Join</li></a>
+                  <a href="#"><li>Contact</li></a>
                 </ul>
             </div>
         </div>
+
+            <div class="row byline">
+                <p>The biggest freely available collection of gazettes in South Africa</p>
+            </div>
+    </div>
+
     </div>
 
 
