update join page, add banner on homepage, upload banner images

--- a/_includes/introduction.html
+++ b/_includes/introduction.html
@@ -1,6 +1,7 @@
 <div class="introduction">
-		<div class="container col-md-8 col-md-offset-2">
+		<div class="container">
 				<div class="banner">
+					<img src="/img/banner_2.jpg" />
 					<p>Join the <span class="highlight"><a href="#">#GazetteLiberation 
 					</a>Campaign</span></p>
 					<p>Help up build the biggest collection of freely available Gazettes in South Africa</p>
