--- a/_includes/header.html
+++ b/_includes/header.html
@@ -27,7 +27,7 @@
   </nav>
 
 
-  <div class="container">
+  <!--<div class="container">
       <div class="row">
 
         <div class="col-md-4 box-byline">
@@ -43,6 +43,6 @@
         </div>
 
       </div>
-  </div>
+  </div>-->
 
 </header>
